kotlin/semlang-parser/src/test/semlang/validatorTests/fail/nameCollision10.sem

interface Bar {
  a(): Integer
}

interface Bar.Adapter {
  b(): Integer
}
